<resources>
    <string name="app_name">Stow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Stow</string>
    <string name="second_fragment_label"> </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="Register"><u>Register</u></string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Confirm">Confirm</string>
    <string name="Cursor">cursor</string>
    <string name="About">About</string>

    <string name="Music_Line1"><u>Music Used</u></string>
    <string name="Music_Line2">Background by 2TECH-AUDIO</string>
    <string name="Music_Line3">Motivate by 2TECH-AUDIO</string>
    <string name="Music_Line4">Passion by 2TECH-AUDIO</string>
    <string name="Music_Line5">https://2tech-audio.bandcamp.com</string>
    <string name="Music_Line6">Music promoted by https://www.free-stock-music.com</string>
    <string name="Refresh">Refresh</string>
    <string name="Add">Add</string>
</resources>